# burn-bench

./: Cargo.toml  run_runpod.sh
.cargo/: config.toml
src/: main.rs
